--- a/TASK_11.ipynb
+++ b/TASK_11.ipynb
@@ -48,34 +48,40 @@
       "cell_type": "code",
       "metadata": {
         "id": "aBzAn6Z75VQ6",
-        "outputId": "1cc2466d-8775-4211-97fe-6c6a6620e85d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19e8cb9b-db0b-44cb-eefa-aa1a965d7735"
       },
       "source": [
         "#please type your answer below this line.\n",
         "import numpy as np\n",
         "a = np.arange(0,9).reshape(3,3)\n",
         "b = np.arange(10,19).reshape(3,3)\n",
-        "print(\"Matrix \")\n",
+        "print(\"Matrix A \")\n",
         "print(a)\n",
+        "print(\"Matrix B\")\n",
+        "print(b)\n",
         "print(\"outer product\")\n",
         "print(np.outer(a,b))\n",
         "print(\"Dot product\")\n",
         "print(np.dot(a,b))\n",
-        "print(\"Element wise product\")\n",
-        "print(a,b)"
+        "print(\"Element wise multiplication\")\n",
+        "print(np.multiply(a,b))"
       ],
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Matrix \n",
+            "Matrix A \n",
             "[[0 1 2]\n",
             " [3 4 5]\n",
             " [6 7 8]]\n",
+            "Matrix B\n",
+            "[[10 11 12]\n",
+            " [13 14 15]\n",
+            " [16 17 18]]\n",
             "outer product\n",
             "[[  0   0   0   0   0   0   0   0   0]\n",
             " [ 10  11  12  13  14  15  16  17  18]\n",
@@ -90,12 +96,10 @@
             "[[ 45  48  51]\n",
             " [162 174 186]\n",
             " [279 300 321]]\n",
-            "Element wise product\n",
-            "[[0 1 2]\n",
-            " [3 4 5]\n",
-            " [6 7 8]] [[10 11 12]\n",
-            " [13 14 15]\n",
-            " [16 17 18]]\n"
+            "Element wise multiplication\n",
+            "[[  0  11  24]\n",
+            " [ 39  56  75]\n",
+            " [ 96 119 144]]\n"
           ],
           "name": "stdout"
         }
@@ -114,10 +118,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "H7cznh8M56r-",
-        "outputId": "821b31d3-e7ae-4688-c009-7d196fba1ca3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "821b31d3-e7ae-4688-c009-7d196fba1ca3"
       },
       "source": [
         "#please type your answer below this line.\n",
@@ -132,7 +136,7 @@
         "print(\"Matrix After multiplication\")\n",
         "print(a)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
